--- a/位运算.md
+++ b/位运算.md
@@ -54,6 +54,49 @@ class Solution:
             n &= n - 1
         return res
 ```
+# 2.数值的整数次方
+
+题目：
+
+实现函数double Power(double base, int exponent)，求base的exponent次方。不得使用库函数，同时不需要考虑大数问题。
+
+## 解法：分情况+位运算
+
+步骤：
+
+1. 当底数为0时，如果指数为负数，报错，如果指数为0，输出0/1，如果为指数为正，输出为0；
+
+2. 当指数大于0时，直接计算次方；
+
+3. 当指数小于0时，先对指数求绝对值，再求次方之后取倒数。
+
+   注意：求次方的实现时，可以巧用位运算，右移一位相当于把原整数除以2，用位与运算代替%求余运算符来判断奇偶数，以提升效率。
+
+```python
+class Solution:
+    def myPow(self, x: float, n: int) -> float:
+        flag = False
+        if x==0 and n < 0:
+            flag = True
+            return 0.0
+        abs_n = abs(n)
+        result = self.power(x, abs_n)
+        if n < 0:
+            result = 1.0 / result
+        return result
+    
+    def power(self, base, exponent):
+        if exponent == 0:
+            return 1
+        if exponent == 1:
+            return base
+        result = float(self.power(base,exponent >> 1))
+        result *= result
+        if exponent & 0x1 == 1:
+            result *= base
+        return result
+```
+
 
 
 
