--- a/链表.md
+++ b/链表.md
@@ -112,3 +112,83 @@ def reversePrint(self, head: ListNode) -> List[int]:
 
 ```
 
+# 2.删除链表的节点
+
+题目：在$O(1)$时间内删除链表节点。给定单向链表的头指针和一个节点指针，定义一个函数在$O(1)$时间内删除该节点。
+
+## 解法：
+
+思路一：从头节点开始往下遍历寻找，如果next指针指向的是需要删除的节点，把它直接指向下一个节点，完成删除。时间复杂度$O(n)$，不满足要求。
+
+```python
+class Solution:
+    def deleteNode(self, head: ListNode, val: int) -> ListNode:
+        if head.val == val: return head.next
+        pre, cur = head, head.next
+        while cur and cur.val != val:
+            pre, cur = cur, cur.next
+        if cur: pre.next = cur.next
+        return head
+```
+
+
+
+思路二：先把需要删除节点i的下一个节点j的内容复制到当前节点i，然后把i的指针指向j的下一个节点，完成删除。如果需要删除的节点位于末尾，要从头遍历；如果链表只有一个节点，删除后，还需设置头节点为null。时间复杂度$O(1)$。
+
+```python
+class Solution:
+    def deleteNode(self, head: ListNode, node:ListNode) -> ListNode:
+        if not head or not node:
+            return
+        if node.next is not None:
+            node.val = node.next.val
+            node.next = node.next.next  
+        elif head == node:
+            head = None
+        else:
+            p = head
+            while p.next != node:
+                p = p.next
+            p.next = None
+```
+
+# 3.删除链表中的重复节点
+
+题目：在一个排序的链表中，如何删除重复的节点？
+
+## 解法：
+
+从头遍历整个链表，如果当前节点的值与下一个节点的值相等，需要被删除，为了保证删除节点之后的链表相连，需要把当前节点的前一个节点的next指针与后面值比当前节点值大的节点相连。
+
+注意：头节点也可能是重复节点，难点主要是指针操作，利用好pre节点。
+
+```python
+class Solution:
+    def deleteDuplicates(self, head: ListNode) -> ListNode:
+        if not head: return 
+        pre = ListNode(-1)
+        pre.next = head
+        res = pre
+        cur = head
+        while cur and cur.next:
+            need_del = False
+            if cur.next.val == cur.val:
+                need_del = True
+            if not need_del:
+                pre, cur = cur, cur.next
+            else:
+                value = cur.val
+                tobedel = cur
+                while tobedel and tobedel.val == value:
+                    tobedel = tobedel.next
+                pre.next = tobedel
+                cur = tobedel
+        return res.next
+```
+
+
+
+
+
+
+
